# maldev-rs

./: .gitignore  Cargo.toml  README.md  readme.md
Hooking_shellcode/: Cargo.toml
Hooking_shellcode/src/: example.c  main.rs
Libraries/hooking/: Cargo.toml
Libraries/injections/src/: early_bird_apc.rs  lib.rs
Libraries/networking/src/: http.rs  lib.rs
Libraries/syscalls/: Cargo.toml
Libraries/syscalls/src/: asm.rs  hell.asm  lib.rs
Libraries/syscalls/tests/: tests.rs
Libraries/utils/: Cargo.toml
Libraries/utils/src/: hash.rs  lib.rs
anti-analysis/drm/: Cargo.toml  readme.md
anti-analysis/drm/src/: drm.rs  errors.rs  fingerprint.rs  image_pe.rs  lib.rs  main.rs
evasion/amsi/: Cargo.toml  readme.md
evasion/amsi/src/: errors.rs  lib.rs
evasion/etw/: Cargo.toml  readme.md
evasion/etw/src/: errors.rs  etw.rs  lib.rs  wide.rs
evasion/syscalls/: Cargo.toml  readme.md
evasion/syscalls/src/: asm.rs  crc32_hash.rs  hells_gate.rs  lib.rs
evasion/syscalls/tests/: tests.rs
hooking/hwbp/: Cargo.toml  readme.md
hooking/hwbp/src/: lib.rs  types.rs  utils.rs
hooking/hwbp/src/core/: breakpoint.rs  context.rs  error.rs  mod.rs  thread.rs  vector_handler.rs  veh.rs
hooking/hwbp/src/detour/: callargs.rs  callbacks.rs  mod.rs
hooking/hwbp/src/manager/: hook_registry.rs  installer.rs  mod.rs
hooking/hwbp/src/utils/: error.rs  types.rs
hooking/trampoline/: Cargo.toml  readme.md
hooking/trampoline/src/: lib.rs
injections/: Cargo.toml
injections/apc/: Cargo.toml  readme.md
injections/apc/src/: early_bird_apc.rs
injections/reflective/: readme.md
injections/reflective/injector/: Cargo.toml
injections/reflective/injector/src/: main.rs
injections/reflective/reflective_dll/: Cargo.toml
injections/reflective/reflective_dll/.cargo/: config.toml
injections/reflective/reflective_dll/src/: arch.rs  executor.rs  lib.rs  mapper.rs  parser.rs  utils.rs
loaders/pe/manual_map/: Cargo.toml
loaders/pe/manual_map/src/: arg_parser.rs  lib.rs
loaders/pe/manual_map/tests/: run_exe.rs
loaders/pe_fluctuation/: Cargo.toml  readme.md
loaders/pe_fluctuation/src/: arch.rs  arg_parser.rs  lib.rs  main.rs  pe_executor.rs  pe_fluctuation.rs  pe_mapper.rs  pe_parser.rs
loaders/pe_mapper/: Cargo.toml  readme.md
loaders/pe_mapper/src/: errors.rs  main.rs  pe_mapper.rs
loaders/pe_mapper/tests/: run_exe.rs
syscalls/: Cargo.toml
syscalls/hells_gate/: Cargo.toml  readme.md
syscalls/hells_gate/src/: asm.rs  hells_gate.rs
syscalls/hells_gate/tests/: tests.rs
syscalls/src/: hells_gate.rs  lib.rs
syscalls/tests/: tests.rs
utils/: Cargo.toml
utils/api_hasher/: Cargo.toml  readme.md
utils/api_hasher/src/: api_table.rs  error.rs  lib.rs  utils.rs
utils/api_hasher/src/algorithms/: crc32.rs  djb2.rs  fnv1a.rs  mod.rs
utils/api_hasher/src/platform/: mod.rs  windows.rs
utils/api_hasher/tests/: no_std_tests.rs  std_tests.rs
utils/hashing/: Cargo.toml
utils/hashing/src/: lib.rs
utils/src/: lib.rs
utils/string_hasher/: Cargo.toml
utils/string_hasher/src/: lib.rs  traits.rs
utils/string_hasher/src/algorithms/: crc32.rs  djb2.rs  fnv1a.rs  jenkins.rs  mod.rs  sdbm.rs
utils/string_hasher/tests/: examples.rs
utils/winapi/: Cargo.toml
utils/winapi/src/: get_env_values.rs  get_remote_process_threads.rs  lib.rs  pe_parsing.rs  structs.rs
winapi/: Cargo.toml
winapi/src/: get_command_line.rs  get_current_dir.rs  get_env_values.rs  get_peb.rs  get_pid.rs  get_remote_process_threads.rs  lib.rs  nt_query_system_information.rs  structs.rs
