[workspace]
members = [
  "hooking",
  "injections",
  "syscalls",
  "utils",
  "winapi",
]
resolver = "3"

[workspace.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_System_WindowsProgramming",
  "Win32_System_LibraryLoader", 
  "Win32_System_Threading",
  "Win32_System_Kernel",
  "Wdk_System_SystemInformation"
]}
