[workspace]
members = [
  "hooking/trampoline",
  "hooking/hwbp",
  "injections/apc",
  "syscalls/hells_gate",
  "utils/hashing",
  "utils/winapi",
  "evasion/etw",
]
resolver = "3"

[workspace.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_System_WindowsProgramming",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_System_Kernel",
  "Win32_System_Diagnostics_Debug",
  "Win32_UI_WindowsAndMessaging",
  "Wdk_System_SystemInformation",
] }
