[workspace]
members = [
  "hooking/trampoline",
  "hooking/hwbp",
  "injections/apc",
  "utils/hashing",
  "utils/winapi",
  "evasion/etw",
  "evasion/amsi",
  "evasion/syscalls",
  "anti-analysis/drm",
  "loaders/pe_mapper",
]
resolver = "3"

[workspace.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_System_WindowsProgramming",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_System_Kernel",
  "Win32_System_Registry",
  "Win32_System_Memory",
  "Win32_System_SystemServices",
  "Win32_System_SystemInformation",
  "Win32_Security",
  "Win32_System_IO",
  "Win32_System_Diagnostics_Debug",
  "Win32_Storage_FileSystem",
  "Win32_UI_WindowsAndMessaging",
  "Wdk_System_SystemInformation",
  "Win32_System_Antimalware",
] }
log = "0.4.28"
