[package]
name = "injections"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.56.0", features = ["Win32", "Win32_System", "Win32_System_Threading", "Win32_System_Memory", "Win32_System_Environment", "Win32_Security", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug"] }