[package]
name = "hells_gate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.57.0"
default-features = true
features = ["Win32_System_Threading", "Win32_System_Kernel"]

[dependencies]
hashing = { path = "../../utils/hashing" }
trampoline = { path = "../../hooking/trampoline" }
