[package]
name = "manual_map"
version = "0.1.0"
edition = "2024"

[lib]
name = "manual_map"
path = "src/lib.rs"

[[bin]]
name = "manual_map"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4.29"
env_logger = "0.11.8"
thiserror = "2.0.17"

windows-sys = { version = "0.61.2", features = [
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_WindowsProgramming",
    "Win32_System_Threading",
    "Win32_System_Kernel",
    "Win32_Security",
    "Wdk",
    "Wdk_System",
    "Wdk_System_Threading",
] }
